# invisiveis-fumaca

./: 01_downloading_pm2p5_data.py  02_unzip_pm2p5_data.py  03_combining_organizing_pm2p5_data.py  04_extracting_pm2p5.py  05_finding_communities.py  06_export_excel.py  07_create_images.py  0x_extracting_pm2p5.py  README.md  pyproject.toml
Data/Processed/: monthly_mean_pm2p5.nc  season_mean_pm2p5.nc
WebMap/Ago/: index.html
WebMap/Ago/data/: Favelas_Comunidades_Urbanas_Centroide_pm2p5_10_afetadas_Ago_7.js  Localidades_Indigenas_pm2p5_10_afetadas_Ago_6.js  Localidades_Quilombolas_pm2p5_10_afetadas_Ago_5.js
WebMap/Dez/: index.html
WebMap/Dez/data/: Favelas_Comunidades_Urbanas_Centroide_pm2p5_10_afetadas_Dez_7.js  Localidades_Indigenas_pm2p5_10_afetadas_Dez_6.js  Localidades_Quilombolas_pm2p5_10_afetadas_Dez_5.js
WebMap/Jul/: index.html
WebMap/Jul/data/: Favelas_Comunidades_Urbanas_Centroide_pm2p5_10_afetadas_Jul_5.js  Localidades_Indigenas_pm2p5_10_afetadas_Jul_6.js  Localidades_Quilombolas_pm2p5_10_afetadas_Jul_7.js  monthly_mean_pm2p5_1.png.aux.xml
WebMap/Nov/: index.html
WebMap/Nov/data/: Favelas_Comunidades_Urbanas_Centroide_pm2p5_10_afetadas_Nov_5.js  Localidades_Indigenas_pm2p5_10_afetadas_Nov_6.js  Localidades_Quilombolas_pm2p5_10_afetadas_Nov_7.js
WebMap/Set/: index.html
WebMap/Set/data/: Favelas_Comunidades_Urbanas_Centroide_pm2p5_10_afetadas_Set_5.js  Localidades_Indigenas_pm2p5_10_afetadas_Set_6.js  Localidades_Quilombolas_pm2p5_10_afetadas_Set_7.js
WebMap/media_temporada/: index.html
WebMap/media_temporada/data/: Estados_3.js  (+3 more)
